# yavta

./: .gitignore  Makefile  meson.build  yavta.c
include/linux/: videodev2.h
